openapi.yamlの分割をやめた、再ジェネレート。その他調整
