# plugin/src/dataSources/webApi/openapi/WebApi/fetchVoice/$api.ts
@@ -1,0 +1,25 @@
+import type { AspidaClient, BasicHeaders } from 'aspida';
+import type { Methods as Methods_by08hd } from '.';
+
+const api = <T>({ baseURL, fetch }: AspidaClient<T>) => {
+  const prefix = (baseURL === undefined ? '' : baseURL).replace(/\/$/, '');
+  const PATH0 = '/fetchVoice';
+  const PUT = 'PUT';
+
+  return {
+    /**
+     * @returns Successful request
+     */
+    put: (option: { body: Methods_by08hd['put']['reqBody'], config?: T | undefined }) =>
+      fetch<Methods_by08hd['put']['resBody'], BasicHeaders, Methods_by08hd['put']['status']>(prefix, PATH0, PUT, option).json(),
+    /**
+     * @returns Successful request
+     */
+    $put: (option: { body: Methods_by08hd['put']['reqBody'], config?: T | undefined }) =>
+      fetch<Methods_by08hd['put']['resBody'], BasicHeaders, Methods_by08hd['put']['status']>(prefix, PATH0, PUT, option).json().then(r => r.body),
+    $path: () => `${prefix}${PATH0}`,
+  };
+};
+
+export type ApiInstance = ReturnType<typeof api>;
+export default api;
