# plugin/src/dataSources/webApi/openapi/WebApi/heartbeat/$api.ts
@@ -1,0 +1,25 @@
+import type { AspidaClient, BasicHeaders } from 'aspida';
+import type { Methods as Methods_by08hd } from '.';
+
+const api = <T>({ baseURL, fetch }: AspidaClient<T>) => {
+  const prefix = (baseURL === undefined ? '' : baseURL).replace(/\/$/, '');
+  const PATH0 = '/heartbeat';
+  const GET = 'GET';
+
+  return {
+    /**
+     * @returns Successful request
+     */
+    get: (option?: { config?: T | undefined } | undefined) =>
+      fetch<Methods_by08hd['get']['resBody'], BasicHeaders, Methods_by08hd['get']['status']>(prefix, PATH0, GET, option).json(),
+    /**
+     * @returns Successful request
+     */
+    $get: (option?: { config?: T | undefined } | undefined) =>
+      fetch<Methods_by08hd['get']['resBody'], BasicHeaders, Methods_by08hd['get']['status']>(prefix, PATH0, GET, option).json().then(r => r.body),
+    $path: () => `${prefix}${PATH0}`,
+  };
+};
+
+export type ApiInstance = ReturnType<typeof api>;
+export default api;
