# plugin/src/dataSources/webApi/openapi/api/@types/index.ts
@@ -1,15 +1,0 @@
-/* eslint-disable */
-export type SpeechTextSignedUrlResponse = {
-  /** 音声データの認証付きURL */
-  url: string;
-}
-
-export type BadRequest = Error
-
-export type Unauthorized = Error
-
-export type Forbidden = Error
-
-export type NotFound = Error
-
-export type InternalServerError = Error
